# trip-extraction

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.cfg  trip-extraction.py
data/: trips.json
tests/: test_car.py  test_cli.py  test_model.py  test_trip.py  test_trip_extraction.py  test_waypoint.py
trip_extraction/: __init__.py  calcs.py  const.py  exceptions.py  logger.py  model.py  processor.py
