[tool.poetry]
name = "trip-extraction"
version = "0.1.0"
description = ""
authors = ["uelei <github@uelei.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
pydantic = "^1.9.0"
geopy = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.18.1"
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}
mypy = "^0.942"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
